# EATC-Assignment2

./: .gitattributes  .gitignore  FraudWatch.ipynb  README.md  feature_names.pkl  label_encoders.pkl  pyproject.toml  scaler.pkl  svc_model.pkl  xgb_model.pkl
