[project]
name = "EATC-Assignment2"
description = "Fraudulent transaction detector"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.59.2",
    "xgboost>=3.3.0",
]
